--- a/web_client/template/dsaat2.html
+++ b/web_client/template/dsaat2.html
@@ -70,7 +70,7 @@
                     <h2 style="color: #C185FE; text-align: center;">Speech Recognition</h1>
                         <ul style="list-style-type: disc;">
                             <li>Speech recognition through system is the generation enhancement this is succesful to perceive phrases and terms in spoken language and convert them to a system-readable format. </li>
-                            <li>Receiving phrases and terms from actual international after which transformed it into system readable language robotically is correctly solved through the usage of finite nation system.</li>
+                            <li>Receiving phrases and terms from actual information after which transformed it into system readable language robotically is correctly solved through the usage of finite automata system.</li>
                         </ul>
                     <img src="../../assets/data/DSAAT/4.png" alt="">
                     <p style="text-align: center;">Fig: Speech Recognition Research Flowchart</p>
