--- a/web_client/template/dmadm.html
+++ b/web_client/template/dmadm.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="../utils.css">
+    <link rel="stylesheet" href="../../utils.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>DMADM</title>
@@ -13,182 +13,92 @@
 <body>
 
       <section style="margin-left: auto; margin-right: auto;">
-        <div id="title-bg" style="--bg-img: url('/../assets/images/Historic Personal Computers Illustration.png') ">
+        <div id="title-bg" style="--bg-img: url('../../assets/images/HistoricPersonalComputersIllustration.png') ">
             <div class="title-content">
                 <p id="title">Database Management and Data Mining</p>
                 <p id="stmt" style="color: #E79DF9;">Big data storage and processing</p>
-                <p>Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a<br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard</p>
+                <p>The collection of data provided by various organizations<br>though be in combination of structured, semi structured<br>or unstructured is known as Big Data. 
+                    Its information can be<br>used and mined for predictive model analysis as well<br>for projects related to machine learning.</p>
             </div>
           </div>
       </section>
 
-      <section style="margin-left: auto; margin-right: auto;">
-        <div class="grid-container">
-            <div class="grid-item">
-                <h1 style="color: #E79DF9; text-align: center; margin: 50px; font-size: 30px;">What is Lorem
-                    Ipsum?</h1>
-                    <p>
-                        Contrary to popular belief, Lorem Ipsum is <br>
-                        not simply random text. It has roots in a <br>
-                        piece of classical Latin literature from 45 <br>
-                        BC, making it over 2000 years old. Richard <br>
-                        McClintock, a Latin professor at Hampden- <br>
-                        Sydney College in Virginia, looked up one of <br>
-                        the more obscure Latin words, consectetur, <br>
-                        from a Lorem Ipsum passage, and going <br>
-                        through the cites of the word in classical <br>
-                        literature, discovered the undoubtable <br>
-                        source.
-                    </p>
-            </div>
-            <div class="grid-item">
-                <img src="\assets\images\color and font.png" alt="">
-            </div>
-            <div class="grid-item"><p>
-                Contrary to popular belief, Lorem Ipsum is<br>
-                not simply random text. It has roots in a <br>
-                piece of classical Latin literature from 45<br>
-                BC, making it over 2000 years old. Richard<br>
-                McClintock, a Latin professor at Hampden-<br>
-                Sydney College in Virginia, looked up one of<br>
-                the more obscure Latin words, consectetur,<br>
-                from a Lorem Ipsum passage, and going<br>
-                through the cites of the word in classical<br>
-                literature, discovered the undoubtable<br>
-                source.
-            </p></div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-          </div> 
-      </section>
-
-
-      <div class="container">
-        
-        <ul class="pagination">
-          <li class="icon">
-            <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
-          </li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li class="icon">
-            <a href="#">Next<span class="fa fa-angle-right"></span></a>
-          </li>
+      <div class="grid-item">
+        <h1 style="color: #C185FE; text-align: center; margin-top: 50px; font-size: 30px;">What is Big Data?</h1>
+        <p> &nbsp;&nbsp;&nbsp; The collection of data provided by various organizations though be in combination of structured, 
+            semi structured or unstructured is known as Big Data. Its information can be used and mined for 
+            predictive model analysis as well as for projects related to machine learning.These are useful information 
+            for companies or organizations which help in gaining richer and deeper insights and getting an advantage 
+            over the competition. Companies or organisations are engaged in competitions with each other so big data 
+            can be useful in enriching and gaining deep insights which can be advantageous.
+            It is therefore crucial to analyze and implement big data implementations carefully.</p>
+            <img src="..\..\assets\data\DMADM\1.png">
+        <p> &nbsp;&nbsp;&nbsp;Companies use big data in their systems to improve operations, provide better customer service, 
+            create personalized marketing campaigns and take other actions that, ultimately, can increase revenue and profits. 
+            It can help businesses make faster and more informed decisions, giving them an edge over those that do not use it.
+            Among the many benefits of big data is its ability to provide companies with valuable insights into their customers, 
+            which can be used to improve their marketing, advertising, and promotions. Businesses can use historical and real-time 
+            data to assess consumer preferences and buyer dynamics, thereby becoming more responsive to customer needs.
+        </p>
+        <ul style="list-style-type: disc;">
+            <li style="margin: 20px;">It is crucial to the energy industry to identify potential drilling sites and monitor pipeline activities. Utility companies use big data to monitor their electrical grids.</li>
+            <li style="margin: 20px;">Risk management and real-time market data analysis are important parts of big data systems used by financial services firms.</li>
+            <li style="margin: 20px;">In order to optimize delivery routes and manage supply chains, manufacturers and transportation companies rely on big data.</li>
         </ul>
-      </div>
+        <p>&nbsp;&nbsp;&nbsp;It is therefore crucial to analyze and implement big data implementations carefully.</p>
+    </div>
+    
+    
+    <div class="grid-item">
+        <h1 style="color: #C185FE; text-align: center; font-size: 30px;">5 V's of Big Data</h1>
+        <p>These are the five characteristics or keys to making big data a huge business.</p>
+        <ol>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Volume</li>
+                <p>It consists of an enormous amount of data and it's necessary to determine the size and value of data. 
+                    That's the reason it's called Big Data. 
+                    Therefore if we are dealing with Big Data it's important to consider volume's characteristics.</p>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Velocity</li>
+                <p>As we know that data flows in from resources like networks, media, cell phones, 
+                    machines and other devices the velocity of data accumulation is very high. 
+                    The data being huge and continuous it's crucial for the data generation to be fast and effective to meet the consumer demands.</p>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Variety</li>
+               <p>Whenever the data or information is received from inside or outside the organisation it can be in any form structured, semi-structured or unstructured. 
+                   So the variety of characteristics deals with such structures and generates the resulting outputs beneficial for the organization.</p>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Veracity</li>
+                <p>If data is obtained in huge amounts or in bulk it creates confusion as it's difficult to understand the information present in it. It could be half or incomplete if it has a small amount of data. 
+                    So Veravity is associated with data uncertainty and inconsistency which can sometimes get messy and go out of control.</p>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Veracity</li>
+                <p>If the data has no or 0 value then it's not benefiting the company or organisation. 
+                    Thus a data must have a value through which information can be extracted and used for decision making. 
+                    Therefore the 5th V is one of the most important characteristics of big data.</p>
+
+        </ol>
+        <img src="..\..\assets\data\DMADM\2.png">
+        <p style="text-align: center;">Fig. 5 V's of Big Data</p>
+    </div>
+
+    
+
+
+<div class="container">
+    <p style="color: #0AFF5C; text-align: center; font-size: 30px;"><b><i>Next: What is Big Data Storage?</i></b></p>
+    <ul class="pagination">
+    <li class="icon">
+        <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
+    </li>
+    <li><a href="dmadm.html">1</a></li>
+    <li><a href="dmadm2.html">2</a></li>
+    <li><a href="dmadm3.html">3</a></li>
+    <li class="icon">
+        <a href="#">Next<span class="fa fa-angle-right"></span></a>
+    </li>
+    </ul>
+</div>
 
       <!-- Site footer -->
     <footer class="site-footer">
         <div class="container">
         <div class="row">
-            
             <div class="col-md-4 col-sm-6 col-xs-12">
             <h1>Contact Us</h1>
             <ul class="social-icons">
