--- a/web_client/template/cn.html
+++ b/web_client/template/cn.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="../utils.css">
+    <link rel="stylesheet" href="../../utils.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CN</title>
@@ -13,161 +13,78 @@
 <body>
 
       <section style="margin-left: auto; margin-right: auto;">
-        <div id="title-bg" style="--bg-img: url('/../assets/images/Screenshot 2021-12-29 202100.jpg') ">
+        <div id="title-bg" style="--bg-img: url('../../assets/images/cn.jpg') ">
             <div class="title-content">
                 <p id="title">Computer Network</p>
                 <p id="stmt" style="color: #F6C367;">Recent Trends in Computer Security</p>
-                <p>Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a<br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard</p>
+                <p>Computer security basically is the protection<br>of computer systems and information from<br> 
+                    harm, theft, and unauthorized use.<br>
+                    It is the process of preventing and detecting<br> unauthorized use of your computer system.</p>
             </div>
           </div>
       </section>
 
-      <section style="margin-left: auto; margin-right: auto;">
+      <div class="grid-item">
+        <h1 style="color: #F6C367; text-align: center; margin-top: 50px; font-size: 30px;">Computer Security</h1>
+        <p> &nbsp;&nbsp;&nbsp; Computer security basically is the protection of computer systems and information from harm, theft, and unauthorized use. 
+            It is the process of preventing and detecting unauthorized use of your computer system.</p>
+            <img src="..\..\assets\data\CN\1.jpg">
+        <p> &nbsp;&nbsp;&nbsp;Today's humans can send and receive data in all formats, including email, audio, and video, 
+            with the click of a button, which is done. Ever think how securely his data id being transmitted or sent to the 
+            other person safely without any leakage of information?? The answer lies in cyber security. Today Internet is the 
+            fastest growing infrastructure in every day life. In today’s technical environment many latest technologies are 
+            changing the face of the mankind. But due to these emerging technologies we are unable to safeguard our 
+            private information in a very effective way and hence these days cyber crimes are increasing day by day. 
+            Today more than 60 percent of total commercial transactions are done online, so this field required a high quality 
+            of security for transparent and best transactions. Hence cybersecurity has become a latest issue. 
+            The scope of cyber security is not just limited to securing the information in IT industry but also 
+            to various other fields like cyber space etc. Even the latest technologies like cloud computing, mobile computing, 
+            E-commerce, net banking etc also needs high level of security. Since these technologies hold some important information 
+            regarding a person their security has become a must thing. Enhancing cybersecurity and protecting critical information infrastructures
+             are essential to each nation's security and economic wellbeing. Making the Internet safer (and protecting Internet users) has become
+              integral to the development of new services as well as governmental policy. 
+            The fight against cyber crime needs acomprehensive and a safer approach.</p>
+        
+        <h1 style="color: #F6C367; text-align: center;">Types</h1>
+        <ul style="list-style-type: disc;">
+            <li style="margin: 20px;"><b>Application Security: </b>Application security is the types of cyber security which developing application by adding security features within applications to prevent from cyber attacks. The attacks can be SQL injection, denial of service (DoS) attacks, data breaches or other cyber-attacks.
+                There are some application security tools and techniques such as firewalls, antivirus software, encryption, and web application firewall which can help to prevent from cyber-attacks.</li>
+            <li style="margin: 20px;"><b>Information Security: </b>Information security (IS) is a types of computer security which refers to the process and methodology to protect the confidentiality, integrity and availability of computer system from unauthorized access, use, modification and destruction.
+                Information security focuses on the CIA triad model, which ensure confidentiality, integrity, and availability of data, without affecting organization productivity.</li>
+            <li style="margin: 20px;"><b>Network Security: </b>Network security is another types of computer security which process of preventing and protecting against unauthorized intrusion into computer networks. It is a set of rules and configurations which designed to protect the confidentiality, integrity and accessibility of computer networks system and information using both software and hardware technologies.</li>
+            <li style="margin: 20px;"><b>Endpoint Security: </b>Human error is a major weak point which is easily exploited by cyber criminals. End users are becoming the largest security risk in any organizations. However, end user has no fault of their own, and mostly due to a lack of awareness and ICT policy. They can unintentional open the virtual gates to cyber attackers.</li>
+            <li style="margin: 20px;"><b>Internet Security: </b>Internet security is the important types of computer security which has defined as a process to create set of rules and actions to protect computers system that are connected to the Internet.</li>
+        </ul>
+
+    </div>
+
+    <div class="grid-item">
+        <h1 style="color: #F6C367; text-align: center; margin-top: 50px; font-size: 30px;">Computer Security Threats</h1>
+        <p>In the present age, cyber threats are constantly increasing as the world is going digital. The most harmful types of computer security are:</p>
         <div class="grid-container">
             <div class="grid-item">
-                <h1 style="color: #F6C367; text-align: center; margin: 50px; font-size: 30px;">What is Lorem
-                    Ipsum?</h1>
-                    <p>
-                        Contrary to popular belief, Lorem Ipsum is <br>
-                        not simply random text. It has roots in a <br>
-                        piece of classical Latin literature from 45 <br>
-                        BC, making it over 2000 years old. Richard <br>
-                        McClintock, a Latin professor at Hampden- <br>
-                        Sydney College in Virginia, looked up one of <br>
-                        the more obscure Latin words, consectetur, <br>
-                        from a Lorem Ipsum passage, and going <br>
-                        through the cites of the word in classical <br>
-                        literature, discovered the undoubtable <br>
-                        source.
-                    </p>
+                <img src="../../assets/data/CN/3.png" width="400px" alt="">
+            </div>
+            <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
+                <h2 style="color: #F6C367;">Virus</h2>
+                <p>A computer virus is a malicious program which is loaded into the user’s computer without user’s knowledge. It replicates itself and infects the files and programs on the user’s PC. The ultimate goal of a virus is to ensure that the victim’s computer will never be able to operate properly or even at all. </p>
             </div>
             <div class="grid-item">
-                <img src="\assets\images\color and font.png" alt="">
+                <img src="../../assets/data/CN/4.png" width="400px" alt="">
             </div>
-            <div class="grid-item"><p>
-                Contrary to popular belief, Lorem Ipsum is<br>
-                not simply random text. It has roots in a <br>
-                piece of classical Latin literature from 45<br>
-                BC, making it over 2000 years old. Richard<br>
-                McClintock, a Latin professor at Hampden-<br>
-                Sydney College in Virginia, looked up one of<br>
-                the more obscure Latin words, consectetur,<br>
-                from a Lorem Ipsum passage, and going<br>
-                through the cites of the word in classical<br>
-                literature, discovered the undoubtable<br>
-                source.
-            </p></div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+            <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
+                <h2 style="color: #F6C367;">Computer Worm</h2>
+                <p>A computer worm is a software program that can copy itself from one computer to another, without human interaction. The potential risk here is that it will use up your computer hard disk space because a worm can replicate in greate volume and with great speed.</p>
             </div>
             <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+                <img src="../../assets/data/CN/5.jpg" width="400px" alt="">
             </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
+            <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
+                <h2 style="color: #F6C367;">Phishing</h2>
+                <p>Disguising as a trustworthy person or business, phishers attempt to steal sensitive financial or personal information through fraudulent email or instant messages. Phishing in unfortunately very easy to execute. You are deluded into thinking it’s the legitimate mail and you may enter your personal information.</p>
             </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is<br>
-                    not simply random text. It has roots in a <br>
-                    piece of classical Latin literature from 45<br>
-                    BC, making it over 2000 years old. Richard<br>
-                    McClintock, a Latin professor at Hampden-<br>
-                    Sydney College in Virginia, looked up one of<br>
-                    the more obscure Latin words, consectetur,<br>
-                    from a Lorem Ipsum passage, and going<br>
-                    through the cites of the word in classical<br>
-                    literature, discovered the undoubtable<br>
-                    source.
-                </p>
-            </div>
-          </div> 
-      </section>
-
+        </div>
+    </div>
 
       <div class="container">
         
@@ -175,9 +92,9 @@
           <li class="icon">
             <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
           </li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
+          <li><a href="cn.html">1</a></li>
+          <li><a href="cn2.html">2</a></li>
+          <li><a href="cn3.html">3</a></li>
           <li class="icon">
             <a href="#">Next<span class="fa fa-angle-right"></span></a>
           </li>
