--- a/web_client/template/dmadm3.html
+++ b/web_client/template/dmadm3.html
@@ -81,9 +81,9 @@
             <li class="icon">
                 <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
             </li>
-            <li><a href="dsaat.html">1</a></li>
-            <li><a href="dsaat2.html">2</a></li>
-            <li><a href="dsaat3.html">3</a></li>
+            <li><a href="dmadm.html">1</a></li>
+            <li><a href="dmadm2.html">2</a></li>
+            <li><a href="dmadm3.html">3</a></li>
             <li class="icon">
                 <a href="#">Next<span class="fa fa-angle-right"></span></a>
             </li>
