--- a/web_client/template/dmadm.html
+++ b/web_client/template/dmadm.html
@@ -63,7 +63,7 @@
             <li style="margin: 20px; color: #C185FE; font-size: x-large;">Veracity</li>
                 <p>If data is obtained in huge amounts or in bulk it creates confusion as it's difficult to understand the information present in it. It could be half or incomplete if it has a small amount of data. 
                     So Veravity is associated with data uncertainty and inconsistency which can sometimes get messy and go out of control.</p>
-            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Veracity</li>
+            <li style="margin: 20px; color: #C185FE; font-size: x-large;">Value</li>
                 <p>If the data has no or 0 value then it's not benefiting the company or organisation. 
                     Thus a data must have a value through which information can be extracted and used for decision making. 
                     Therefore the 5th V is one of the most important characteristics of big data.</p>
