--- a/web_client/template/cn.html
+++ b/web_client/template/cn.html
@@ -22,24 +22,9 @@
 
       <div class="grid-item">
         <h1 style="color: #F6C367; text-align: center; margin-top: 50px; font-size: 30px;">Computer Security</h1>
-        <p> &nbsp;&nbsp;&nbsp; Computer security basically is the protection of computer systems and information from harm, theft, and unauthorized use. 
-            It is the process of preventing and detecting unauthorized use of your computer system.</p>
+        <p> &nbsp;&nbsp;&nbsp; Computer security is basically protecting your computer system and information from damage, theft, and unauthorized use. This is the process of preventing and detecting unauthorized use of  computer systems. 
+            Today's people can send and receive data in all formats, including email, audio and video, with the click of a button. Have you ever thought about being able to securely send or send his data  to others without leaking information? The answer lies in cybersecurity. Today, the Internet is the fastest growing infrastructure in our daily lives. In today's technological environment, many of the latest technologies are changing the face of mankind. However, these new technologies have failed to effectively protect personal information and cybercrime is on the rise every day. Today, more than 60% of all commerce is done online, so  high security quality was needed for transparent and best transactions in this area. Therefore, cyber security has become a hot topic. The scope of cyber security is not just limited to securing the information in IT industry but also to various other fields like cyber space etc. Even the latest technologies like cloud computing, mobile computing, Ecommerce, net banking etc also needs high level of security. Since these technologies hold some important information regarding a person their security has become a must thing. Enhancing cybersecurity and protecting critical information infrastructures are essential to each nation's security and economic wellbeing. Making the Internet safer (and protecting Internet users) has become integral to the development of new services as well as governmental policy. Fighting cybercrime requires a comprehensive and  safer approach.</p>
             <img src="..\..\assets\data\CN\1.jpg">
-        <p> &nbsp;&nbsp;&nbsp;Today's humans can send and receive data in all formats, including email, audio, and video, 
-            with the click of a button, which is done. Ever think how securely his data id being transmitted or sent to the 
-            other person safely without any leakage of information?? The answer lies in cyber security. Today Internet is the 
-            fastest growing infrastructure in every day life. In today’s technical environment many latest technologies are 
-            changing the face of the mankind. But due to these emerging technologies we are unable to safeguard our 
-            private information in a very effective way and hence these days cyber crimes are increasing day by day. 
-            Today more than 60 percent of total commercial transactions are done online, so this field required a high quality 
-            of security for transparent and best transactions. Hence cybersecurity has become a latest issue. 
-            The scope of cyber security is not just limited to securing the information in IT industry but also 
-            to various other fields like cyber space etc. Even the latest technologies like cloud computing, mobile computing, 
-            E-commerce, net banking etc also needs high level of security. Since these technologies hold some important information 
-            regarding a person their security has become a must thing. Enhancing cybersecurity and protecting critical information infrastructures
-             are essential to each nation's security and economic wellbeing. Making the Internet safer (and protecting Internet users) has become
-              integral to the development of new services as well as governmental policy. 
-            The fight against cyber crime needs acomprehensive and a safer approach.</p>
         
         <h1 style="color: #F6C367; text-align: center;">Types</h1>
         <ul style="list-style-type: disc;">
@@ -63,21 +48,21 @@
             </div>
             <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
                 <h2 style="color: #F6C367;">Virus</h2>
-                <p>A computer virus is a malicious program which is loaded into the user’s computer without user’s knowledge. It replicates itself and infects the files and programs on the user’s PC. The ultimate goal of a virus is to ensure that the victim’s computer will never be able to operate properly or even at all. </p>
+                <p> It's a malicious program loaded in user computer without knowing user. the goal is to effect files and program on the user pc.</p>
             </div>
             <div class="grid-item">
                 <img src="../../assets/data/CN/4.png" width="400px" alt="">
             </div>
             <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
                 <h2 style="color: #F6C367;">Computer Worm</h2>
-                <p>A computer worm is a software program that can copy itself from one computer to another, without human interaction. The potential risk here is that it will use up your computer hard disk space because a worm can replicate in greate volume and with great speed.</p>
+                <p>Is a type of malware that apreads copies of itself from computer to computer.</p>
             </div>
             <div class="grid-item">
                 <img src="../../assets/data/CN/5.jpg" width="400px" alt="">
             </div>
             <div class="grid-item" style="margin-top: auto; margin-bottom: auto;">
                 <h2 style="color: #F6C367;">Phishing</h2>
-                <p>Disguising as a trustworthy person or business, phishers attempt to steal sensitive financial or personal information through fraudulent email or instant messages. Phishing in unfortunately very easy to execute. You are deluded into thinking it’s the legitimate mail and you may enter your personal information.</p>
+                <p>It’s type of social engineering attack often used to steal user personal and sensitive data. Phishing attack are perform through email, instant message or text message.</p>
             </div>
         </div>
     </div>
