--- a/web_client/template/cn2.html
+++ b/web_client/template/cn2.html
@@ -24,21 +24,26 @@
         <h1 style="color: #F6C367; text-align: center; margin-top: 50px; font-size: 30px;">Recent Trends in Computer Security</h1>
         <h2 style="color: #F6C367;">AI Integration</h2>
         <img src="../../assets/data/CN/6.jpg" alt="">
-        <p>As the number of connected devices increases, Internet of Things (IoT) applications become vulnerable to various forms of malicious attackers. AI development has multiple influences on cybersecurity. AI integration has become AI is the number one cybersecurity trend because it is a useful tool for ensuring data integrity by detecting threats on a large scale like prevention of zero-day attacks. AI in cybersecurity systems acts like the human immune system. Useful for identifying threats, learning from past security issues, and more. Here you can see some of their main benefits.  </p>
+        <p>Internet of Things (IoT) applications are becoming more vulnerable to cyber attacks due to the increasing number of connected devices. Artificial intelligence development greatly influences cybersecurity. 
+          Despite being a relatively recent cyber trend, AI integration has quickly gained traction because it is a practical tool for ensuring data integrity by identifying threats on a large scale like preventing zero day attacks.Here are some of the key benefits of artificial intelligence in cybersecurity systems, such as finding threats, studying past security issues, and more.
+          </p>
         <p>AI integration is also useful in the following cases: </p>
         <ul>
             <li>Providing threat intelligence. </li>
             <li> Analyze the risks of your data  before it becomes an irreversible problem. </li>
             <li> Make informed decisions about critical security concerns with real-time, immediate response capabilities. </li>
         </ul>
-        <p>Technologies such as AI, ML, and data visualization use large amounts of information over time. Simply put, AI provides the intelligence to observe the  patterns needed for new data flows and network activity.</p>
+        <p>Machine learning, AI, and data visualization use a lot of information over time. Artificial intelligence refers to the ability to observe patterns in data flows and network activity in order to detect new ones.</p>
         
     </div>
 
     <div class="grid-item">
         <h2 style="color: #F6C367;">Cloud Security Issues</h2>
         <img src="../../assets/data/CN/7.jpg" alt="">
-        <p>As business processes, infrastructure, and data move more and more to the cloud, protecting information and critical infrastructure requires a whole new approach to enterprise security. Cloud-based threats will inevitably continue to grow as organizations struggle to maintain control over critical data and ensure real-time threat intelligence. Improperly protected or configured data buckets increase the risk of serious data breaches for  large and small enterprises and can easily add rogue cloud services to end users. Organizations find that manual security management of large-scale web application infrastructures is no longer practical and are forced to rethink their approach to web application security.</p>
+        <p>In an environment where more and more business processes, infrastructure, and data are moving to the cloud, securing critical infrastructure and information needs an entirely new approach. 
+          In the future, organizations will struggle to maintain control over critical data and ensure real-time threat intelligence as cloud-based threats are unavoidable. Large and small enterprises are particularly at risk from poorly protected or configured data buckets, which can easily expose them to potentially rogue cloud services.
+          As web application security approaches become more complex, organizations find it difficult to manage security manually. They are forced rethink how they manage web application security.
+          </p>
         <h2 style="color: #F6C367;">Data Breaches as the Top Cyberthreat</h2>
         <img src="../../assets/data/CN/8.jpg" alt="">
         <p>Data breaches continue to be reported as cybersecurity one of the biggest concern, and as long as personal information remains a valuable commodity in the black market, this can continue. This is partly due to increasingly stringent data protection laws, such as the European Union's General Data Protection Regulation , but companies are also beginning to recognize the potential negative impact of data breaches on their images.</p>
